--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,24 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="whatText">A world where there is no corporate bullshit,
+        a world where we all know what we are buying. That’s the world that noBS ratings wants. \n\n
+        Our rating system gives the power back to consumers by providing them with information
+        about the social and ethical impact of the businesses they support</string>
+    <string name="whoText">
+        We were formed over the 15/16 summer as we went through the Live the Dream social entrepreneurship accelerator program.
+        At our core is the Nobs community, the changemakers that use our ratings. \n\n
+        The core team is a bunch of university students that share our passion to eliminate the bullshit!
+    </string>
+    <string name="WhoWeAre">
+        <u>Who We Are</u>
+    </string>
+
+    <string name="WhatWeDo">
+        <u>Our Mission</u>
+    </string>
+
+    <string name="Members">
+        <u>Members</u>
+    </string>
 </resources>
