--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
         <u>Members</u>
     </string>
     <string name="titleTextSize">16sp</string>
+    <string name="what_we_do_intro">Empowering people to make purchases that align with their values and in turn, encourage businesses to align their processes with these values to create a better world.</string>
+    <string name="why_are_we_doing_text">We want a world with NO Bullshit- NO child labour, NO pollution, NO inequality. \n\nEveryone has power to create this better world with businesses they choose to support. \n\nBy providing a convenient way for everyone to understand how their purchase impacts society, we empower people to create a better world one purchase at a time.</string>
 </resources>
